--- a/package.json
+++ b/package.json
@@ -14,11 +14,20 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
+    "@types/node": "^10.12.24",
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
     "@types/react-redux": "^7.0.1",
+    "@types/react-router": "^4.4.3",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-router-redux": "^5.0.17",
+    "@types/styled-components": "^4.1.8",
+    "axios-mock-adapter": "^1.16.0",
     "babel-loader": "^8.0.5",
+    "browser-env": "^3.2.5",
+    "clean-webpack-plugin": "^1.0.1",
     "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.16.4",
     "ts-loader": "^5.3.3",
@@ -34,9 +43,14 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
-    "redux": "^4.0.1"
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.1",
+    "styled-components": "^4.1.3"
   }
 }
