--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react_boilerplate",
   "version": "1.0.0",
   "main": "index.js",
+  "repository": "ssh://git@github.com:mizunomi32/react_boilerplate.git",
   "author": "mz32 <mz@mz32.net>",
   "license": "MIT",
   "scripts": {
